@@ -23,6 +23,7 @@ Trunk (unreleased changes)
 INCOMPATIBLE CHANGES
  
 IMPROVEMENTS
+PIG-5438: Update SparkCounter.Accumulator to AccumulatorV2 (knoguchi)
  
 OPTIMIZATIONS
  
